12th correction : Modifying colors to comply to the 4.5:1 contrast ratio rule.

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: rgba(255, 255, 255, 2.7);
 }
 
 .d-bloc .a-btn,
@@ -339,7 +339,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #000!important;
 }
 
 .container {
@@ -459,15 +459,15 @@ h1 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #c15320;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #c15320;
     color: #FFFFFF!important;
 }
 
@@ -499,6 +499,10 @@ h1 {
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.jpg");
+}
+
+.keywords{
+    color:#FFF;
 }
 
 @media (max-width: 1024px) {
